# COAR-Notify-INRIA-HAL

./: .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: docker-publish.yml  release.yml
app/: __init__.py  app.py  auth.py
app/classes/: ActionReviewNotifier.py  RelationshipAnnounceNotifier.py
app/routes/: api_documents.py  api_software.py  api_status.py  coar_inbox.py
app/static/data/notif_test/: README.md  swh-announce-with-attributes.json
app/templates/: dashboard.html  database.html  home.html  notifications.html
app/utils/: blacklist_manager.py  db.py  notification_handler.py
docs/: database.md
docs/notif_test/: hal-offer-with-attributes.json
sandbox/: answer_from_hal_sender.py  json_sender.py  status_check.py
