[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coar-notify-inria-hal"
version = "0.1.0"
description = "COAR Notify implementation for INRIA HAL"
authors = [
    {name = "Luca Foppiano", email = "luca@sciencialab.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Flask==3.0.3",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "pyArango==2.1.1",
    "gunicorn==23.0.0",
]

[dependency-groups]
dev = [
    "ruff==0.7.4",
    "mypy==1.13.0",
    "bump-my-version==0.28.1",
]

[project.urls]
Homepage = "https://github.com/Samuel-Scalbert/COAR-Notify-INRIA-HAL"
Repository = "https://github.com/Samuel-Scalbert/COAR-Notify-INRIA-HAL.git"
Issues = "https://github.com/Samuel-Scalbert/COAR-Notify-INRIA-HAL/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["sandbox"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # handled by formatter
    "B008",  # Flask patterns use function calls in defaults
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# The codebase is partially typed. Tighten these over time.
disallow_untyped_defs = false
check_untyped_defs = true

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = ""
message = "chore: bump version {current_version} -> {new_version}"
allow_dirty = false
sign_tags = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
